syntax = "proto3";

package proto;

option csharp_namespace = "ThesisService.Protos";

//protoc --go_out=. --go-grpc_out=. proto/participate.proto

message Thesis {
  int32 thesis_id = 1;
  string title = 2;
  string description = 3;
  string student_id = 4;
  string token = 5;
}

message PartitipationResponse {
  bool approved = 1;
}

service ParticipateService {
  rpc Participate(Thesis) returns (PartitipationResponse);
}
